# Plant-Imager3

./: .gitignore  404.html  README.md  env.yaml  index.html  mkdocs.yml  objects.inv  sitemap.xml
.github/workflows/: conda.yml  gh-pages.yml  pip_build_commons.yml  pip_build_controller.yml  pip_build_webui.yml
.junie/: guidelines.md
camera/: qt_display_pyav.py  tests.md
conda/env/: plantimager.yaml
conda/recipe/: meta.yaml
developer/: index.html
developer/NTP_server/: index.html
developer/RPC/: index.html
developer/architecture/: index.html
developer/documentation/: index.html
developer/guidelines/: index.html
developer/system_updater/: index.html
docker/nginx/: Dockerfile  README.md  default.conf  default_full.conf  nginx.conf
docker/webui/: .dockerignore  Dockerfile  build.sh  entrypoint.sh
docs/: index.md  rest_api.md
docs/assets/scripts/: gen_ref_pages.py
docs/developer/: NTP_server.md  RPC.md  architecture.md  guidelines.md  index.md  system_updater.md
docs/usage/: services_overview.md  services_startup.md  services_usage.md
experiments/camera/: pyav_receiver.py  qt_display.py
experiments/romi-cam2/: capture_stream.py  experiment.md  mjpeg_server.py
network-config/: dnsmasq-config.md
network-config/etc/: dnsmasq.conf  ethers  hosts  resolvconf.conf
reference/SUMMARY/: index.html
reference/commons/: index.html
reference/commons/RPC/: index.html
reference/commons/cameradevice/: index.html
reference/commons/controller_device/: index.html
reference/commons/deviceregistry/: index.html
reference/commons/examples/: index.html
reference/commons/examples/cameraclient/: index.html
reference/commons/examples/cameraserver/: index.html
reference/commons/logging/: index.html
reference/commons/systemd/: index.html
reference/commons/utils/: index.html
reference/controller/: index.html
reference/controller/AppBridge/: index.html
reference/controller/ImageProvider/: index.html
reference/controller/PlantImagerApp/: index.html
reference/controller/PlantImagerApp/Controls/: index.html
reference/controller/PlantImagerApp/Style/: index.html
reference/controller/PlantImagerApp/rc_style/: index.html
reference/controller/PlantImagerApp/ttf/: index.html
reference/controller/camera/: index.html
reference/controller/camera/CameraBridge/: index.html
reference/controller/camera/CameraVideoReceiver/: index.html
reference/controller/camera/PiCameraComm/: index.html
reference/controller/camera/pyav_receiver/: index.html
reference/controller/main/: index.html
reference/controller/scanner/: index.html
reference/controller/scanner/calibrate/: index.html
reference/controller/scanner/dummy_cnc/: index.html
reference/controller/scanner/grbl/: index.html
reference/controller/scanner/hal/: index.html
reference/controller/scanner/path/: index.html
reference/controller/scanner/powermanager/: index.html
reference/controller/scanner/rpc_controller/: index.html
reference/controller/scanner/scan/: index.html
reference/controller/scanner/scanner/: index.html
reference/webui/: index.html
reference/webui/app/: index.html
reference/webui/carousel/: index.html
reference/webui/config/: index.html
reference/webui/controller_proxy/: index.html
reference/webui/login/: index.html
reference/webui/nav/: index.html
reference/webui/new_user/: index.html
reference/webui/pages/: index.html
reference/webui/scan/: index.html
reference/webui/utils/: index.html
reference/webui/visu/: index.html
reference/webui/wsgi/: index.html
rest_api/: index.html
romi-cam2/: picam_stream.py  pyav_stream.py
romi-cam2/mediamtx/: mediamtx.yml
scripts/: system_updater.py  update_config.csv  update_config_dev.csv
search/: search_index.json
src/commons/: README.md  pyproject.toml
src/commons/plantimager/commons/: RPC.py  cameradevice.py  controller_device.py  deviceregistry.py  logging.py  systemd.py  utils.py
src/commons/plantimager/commons/examples/: cameraclient.py  cameraserver.py
src/controller/: MANIFEST.in  README.md  pyproject.toml
src/controller/plantimager/controller/: AppBridge.py  ImageProvider.py  Orchestrator.py  main.py
src/controller/plantimager/controller/PlantImagerApp/: Header.qml  LeftPane.qml  Loader.qml  Main.qml  RightPane.qml  qmldir
src/controller/plantimager/controller/PlantImagerApp/Controls/: CameraDelegate.qml  CameraView.qml  CncPanel.qml  Icon.qml  NumericKeyboardPopup.qml  ProgressBar.qml  Scanner.qml  qmldir
src/controller/plantimager/controller/PlantImagerApp/Style/: Style.qml
src/controller/plantimager/controller/camera/: CameraBridge.py  CameraReceiver.py  CameraVideoReceiver.py  PiCameraComm.py  PiCameraProxy.py  __init__.py  pyav_receiver.py
src/controller/plantimager/controller/scanner/: calibrate.py  dummy_cnc.py  grbl.py  hal.py  path.py  powermanager.py  rpc_controller.py  scan.py  scanner.py  timelapse.py  timelapse_store.py  units.py
src/picamera/: README.md  pyproject.toml
src/plantimager/: main.py
src/plantimager/PlantImagerApp/: LeftPane.qml  Main.qml  RightPane.qml  qtquickcontrols2.conf  rc_style.py  style.qrc
src/plantimager/camera/: CameraBridge.py  __init__.py
src/webui/: README.md  pyproject.toml
src/webui/plantimager/webui/: app.py  carousel.py  config.py  controller_proxy.py  login.py  nav.py  new_user.py  scan.py  utils.py  visu.py  wsgi.py
src/webui/plantimager/webui/assets/: config_scan.toml  dashAgGridComponentFunctions.js
src/webui/plantimager/webui/pages/: home.py  table.py
system-config/picamera/scripts/: install_picamera.sh
system-config/picamera/services/: install.md  picamera-server.service
system-config/plant-imager/services/: mellitus_tunnel_config  plant-imager-app.service  plant-imager-socks5.service  plant-imager-webui.service
test/: test_RPC_isinstance_generic.py  test_RPC_registry.py  test_powermanager.py  test_scan.py  test_scan_integration.py  test_timelapse_store.py
usage/services_overview/: index.html
usage/services_startup/: index.html
usage/services_usage/: index.html
(+14 files in other folders)
