[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "plantimager.controller"
version = "0.0.1"
dependencies = [
    "av",
    "pyside6",
    "pyside6-addons",  # for QtMultimedia
    "pyserial",
    "scipy",
    "numpy",
]

[project.gui-scripts]
plant-imager-controller-app = "plantimager.controller.main:main"